<resources>
    <string name="app_name">EventsBook</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="eventTypes">
        <item>CQB</item>
        <item>OutDoor</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />

    <string name="google_maps_key">AIzaSyBN3XEBxSIqTuYffPZUCb8M58S1-OJX9TI</string>

    <string name="biometric_failed">Fingerprint not recognized, try again.</string>

</resources>
