...
        android:layout_marginLeft="98dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/textView27"
        android:layout_toRightOf="@+id/textView27" />

    <Button
        android:id="@+id/update"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
...
